<resources>
    <string name="app_name">AapkiSevaMein</string>
    <string name="product_name">Product_Name</string>
    <string name="product_price">Rs. 50.00</string>
    <string name="product_quantity">10kg</string>
    <string name="service_name">Service</string>
    <string name="buy">Add to Cart</string>
    <string name="moveback">Back</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="yourcart">Your Cart</string>
    <string name="user_name">User Name</string>
    <string name="phonetext">Phone Number : </string>
    <string name="phonenumtext">Phone Number</string>
    <string name="phonenumber">1111111111</string>
    <string name="emailtext">E-mail : </string>
    <string name="email1text">E-mail</string>
    <string name="email">abc@gmail.com</string>
    <string name="delivaddtext">Delivery Address : </string>
    <string name="delivaddresstext">Delivery Address</string>
    <string name="delivaddress">H.No.: X/XX, ABC Colony, \nABC Road, Dehradun, \nUttarkhand \n248001</string>
    <string name="yourorder">Your Orders</string>
    <string name="feedback">Suggestions/Feedbacks</string>
    <string name="changepasspin">Change Password/Pin</string>
    <string name="logout">Log Out</string>
    <string name="carttotaltext">Cart Subtotal : </string>
    <string name="carttotalamt">Rs. 500.00</string>
    <string name="carttotalitemtext">Total Items : </string>
    <string name="carttotalitemamt">30</string>
    <string name="products">Products</string>
    <string name="checkout">Checkout</string>
    <string name="quantity">Quantity</string>
    <string name="tollfree_text">Toll-Free Number 1</string>
    <string name="tollfree_number">1800 180 180</string>
    <string name="feedback_1">Suggestions and Feedback :</string>
    <string name="feedback_review">Review :</string>
    <string name="submit">Submit</string>
    <string name="product_buydate">25/08/2017</string>
    <string name="editdetails">Edit Details</string>
    <string name="save">Save</string>
    <string name="changepic">Change Profile Picture</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="changepassword">Change Password</string>
    <string name="deleteproduct">Delete</string>
    <string name="default_quantity">1</string>
    <string name="order_info">Order Details</string>
    <string name="order_id">Order ID :</string>
    <string name="dummyid">112#abcd</string>
    <string name="order_total">Order SubTotal :</string>
    <string name="dummytotal">1000.00</string>
    <string name="extra_charges">Delivery Charges :</string>
    <string name="dummyextracharges">100.00</string>
    <string name="final_payment">Total Cost :</string>
    <string name="dummyfinalamt">1100.00</string>
    <string name="payment_choice">Payment</string>
    <string name="debitcardnumber">Debit Card Number</string>
    <string name="debitcardcvv">CVV</string>
    <string name="debitcardexpdate">Valid Upto</string>
    <string name="debitcardholder">Holder Name</string>
    <string name="pay">Pay</string>
    <string name="order_holder">Deliver To :</string>
    <string name="dummy_holder">Mr. John Doe</string>
</resources>
