<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/order_bar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/Image_orderbar"
            android:layout_width="150dp"
            android:layout_height="120dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/Image_orderbar"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/Text_orderbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/product_name"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Price_orderbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Text_orderbar"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/product_price"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Quantity_orderbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Price_orderbar"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/product_quantity"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Date_orderbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Price_orderbar"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:text="@string/product_buydate"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>